--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>Shadow Puppet Arena</title><style>*{margin:0;padding:0}body{background:#0d0d12;color:#e0e0e0;font:14px sans-serif;overflow:hidden;height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:center}#lobby{text-align:center;padding:15px}#lobby input,#lobby button{font-size:16px;padding:10px;margin:5px;border-radius:6px;border:1px solid #444}#lobby button{background:#4a2d8e;color:#fff;cursor:pointer}#qr{display:none;margin:10px;background:#fff;padding:8px;border-radius:8px}#c{background:#1a1a24;border-radius:8px;display:none;cursor:crosshair;max-width:95vw;max-height:50vh;border:2px solid #333}#ui{display:none;padding:10px;text-align:center}#ui input,#ui button{font-size:14px;padding:8px;margin:4px;border-radius:6px;border:1px solid #444}#ui button{background:#4a2d8e;color:#fff}#arena{display:none;width:100%;flex:1;flex-direction:column;align-items:center;padding-top:10px}#ac{background:#1a1a24;border-radius:8px;max-width:100%;max-height:60vh}#qrDraw{display:none;margin:5px}#log{font-size:11px;color:#aaa;max-height:80px;overflow-y:auto;width:90%;text-align:left;padding:6px;background:#151520;border-radius:6px;margin-top:6px}</style></head><body><div id=lobby><h1>🦇 Shadow Puppet Arena</h1><p style=margin:8px>Draw a monster. Up to 6 players!</p><button id=create>Create Game</button><br><input id=code placeholder="Room code" maxlength=4 style=text-transform:uppercase><button id=join>Join</button><div id=qr></div><p id=msg style=margin-top:15px;color:#888>Connecting...</p></div><div id=ui style=display:none><p id=room>Room: ---</p><div id=qrDraw></div><p id=count></p><input id=mname placeholder="Name your monster" maxlength=12><br><canvas id=c width=300 height=300></canvas><p id=drawStatus style=margin:8px>Draw your monster</p><button id=done>Ready!</button><button id=unready style=display:none;background:#666>Unready</button></div><div id=arena><canvas id=ac width=640 height=480></canvas><div id=log></div></div><script>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>Shadow Puppet Arena</title><style>*{margin:0;padding:0}body{background:#0d0d12;color:#e0e0e0;font:14px sans-serif;overflow:hidden;height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:center}#lobby{text-align:center;padding:15px}#lobby input,#lobby button{font-size:16px;padding:10px;margin:5px;border-radius:6px;border:1px solid #444}#lobby button{background:#4a2d8e;color:#fff;cursor:pointer}#qr{display:none;margin:10px;background:#fff;padding:8px;border-radius:8px}#c{background:#1a1a24;border-radius:8px;display:none;cursor:crosshair;max-width:95vw;max-height:50vh;border:2px solid #333}#ui{display:none;padding:10px;text-align:center}#ui input,#ui button{font-size:14px;padding:8px;margin:4px;border-radius:6px;border:1px solid #444}#ui button{background:#4a2d8e;color:#fff}#arena{display:none;width:100%;flex:1;flex-direction:column;align-items:center;padding-top:10px}#ac{background:#1a1a24;border-radius:8px;max-width:100%;max-height:55vh}#qrDraw{display:none;margin:5px}#log{font-size:11px;color:#aaa;max-height:60px;overflow-y:auto;width:90%;text-align:left;padding:6px;background:#151520;border-radius:6px;margin-top:4px}#blastBtn{background:#c0392b;color:#fff;font-size:14px;padding:8px 16px;border:none;border-radius:6px;margin-top:4px;cursor:pointer;display:none}#blastBtn:disabled{background:#555;cursor:default}.hint{font-size:11px;color:#888;margin:4px}</style></head><body><div id=lobby><h1>Shadow Puppet Arena</h1><p style=margin:8px>Draw a monster. Up to 6 players!</p><button id=create>Create Game</button><br><input id=code placeholder="Room code" maxlength=4 style=text-transform:uppercase><button id=join>Join</button><div id=qr></div><p id=msg style=margin-top:15px;color:#888>Connecting...</p></div><div id=ui style=display:none><p id=room>Room: ---</p><div id=qrDraw></div><p id=count></p><input id=mname placeholder="Name your monster" maxlength=12><br><canvas id=c width=300 height=300></canvas><p class=hint>Draw in ONE stroke. Shape will auto-close. Fill it completely!</p><p id=drawStatus style=margin:4px>Draw your monster</p><button id=done>Ready!</button><button id=unready style=display:none;background:#666>Unready</button></div><div id=arena><canvas id=ac width=640 height=480></canvas><button id=blastBtn>Blast (ready)</button><div id=log></div></div><script>
 (function(){
-var lobby=document.getElementById('lobby'),ui=document.getElementById('ui'),arena=document.getElementById('arena'),c=document.getElementById('c'),ac=document.getElementById('ac'),msg=document.getElementById('msg'),room=document.getElementById('room'),count=document.getElementById('count'),qr=document.getElementById('qr'),done=document.getElementById('done'),unready=document.getElementById('unready'),log=document.getElementById('log');
-var W=300,H=300,path=[],playerId=0,monsters={},ws,isReady=false,bounds=[0,0,640,480];
+var lobby=document.getElementById('lobby'),ui=document.getElementById('ui'),arena=document.getElementById('arena'),c=document.getElementById('c'),ac=document.getElementById('ac'),msg=document.getElementById('msg'),room=document.getElementById('room'),count=document.getElementById('count'),qr=document.getElementById('qr'),done=document.getElementById('done'),unready=document.getElementById('unready'),log=document.getElementById('log'),blastBtn=document.getElementById('blastBtn');
+var W=300,H=300,path=[],playerId=0,monsters={},packs=[],ws,isReady=false,bounds=[0,0,640,480];
+var blastMode=false,blastCooldown=0;
 var WS_URL=(location.protocol==='https:'?'wss:':'ws:')+'//'+(location.host||'localhost:3000');
 var retries=0;
 function post(m){msg.textContent=m;msg.style.color='#888'}
@@ -16,7 +17,7 @@ if(d.t==='code'){room.textContent='Room: '+d.code;var joinUrl=location.origin+'/
 else if(d.t==='joined'){count.textContent=(d.count||0)+' players';post('Player joined!')}
 else if(d.t==='status'){count.textContent=d.ready+'/'+d.total+' ready'}
 else if(d.t==='start'){lobby.style.display='none';ui.style.display='block';c.style.display='block';playerId=d.id}
-else if(d.t==='arena'){monsters=d.m;if(d.b)bounds=d.b;lobby.style.display='none';ui.style.display='none';arena.style.display='flex';if(d.log)for(var i=0;i<d.log.length;i++)addLog(d.log[i]);renderArena()}
+else if(d.t==='arena'){monsters=d.m;packs=d.pk||[];if(d.b)bounds=d.b;lobby.style.display='none';ui.style.display='none';arena.style.display='flex';blastBtn.style.display='inline-block';if(d.log)for(var i=0;i<d.log.length;i++)addLog(d.log[i]);renderArena()}
 else if(d.t==='full'){postErr('Room full')}
 else if(d.t==='invalid'){postErr('Invalid code')}}}
 function createGame(){if(ws&&ws.readyState===1)ws.send(JSON.stringify({t:'create'}));else postErr('Connecting...')}
@@ -51,15 +52,23 @@ if(name){ctx.fillStyle='#fff';ctx.font='bold 14px sans-serif';ctx.textAlign='cen
 return stats}
 function renderArena(){
 var ctx=ac.getContext('2d');
-ctx.fillStyle='#0d0d12';ctx.fillRect(0,0,640,480);
 ctx.fillStyle='#180818';ctx.fillRect(0,0,640,480);
 ctx.fillStyle='#0d0d12';ctx.fillRect(bounds[0],bounds[1],bounds[2]-bounds[0],bounds[3]-bounds[1]);
-ctx.strokeStyle='#444';ctx.lineWidth=2;ctx.strokeRect(bounds[0],bounds[1],bounds[2]-bounds[0],bounds[3]-bounds[1]);
+ctx.strokeStyle='#555';ctx.lineWidth=2;ctx.strokeRect(bounds[0],bounds[1],bounds[2]-bounds[0],bounds[3]-bounds[1]);
+// Health packs
+for(var pi=0;pi<packs.length;pi++){
+var pk=packs[pi];
+ctx.fillStyle='#2ecc71';ctx.beginPath();ctx.arc(pk.x,pk.y,10,0,Math.PI*2);ctx.fill();
+ctx.fillStyle='#fff';ctx.font='bold 10px sans-serif';ctx.textAlign='center';ctx.textBaseline='middle';
+// Draw + symbol
+ctx.fillRect(pk.x-6,pk.y-2,12,4);ctx.fillRect(pk.x-2,pk.y-6,4,12);
+ctx.fillStyle='#155d32';ctx.font='bold 9px sans-serif';ctx.fillText(pk.hp,pk.x,pk.y+16);
+}
+// Monsters
 for(var id in monsters){
 var m=monsters[id];
 if(!m.path||!m.path.length)continue;
 var sc=m.size/40;
-// Compute centroid of path to center shape
 var pcx=0,pcy=0;for(var i=0;i<m.path.length;i++){pcx+=m.path[i][0]*12;pcy+=m.path[i][1]*12}pcx/=m.path.length;pcy/=m.path.length;
 ctx.save();ctx.translate(m.x,m.y);ctx.scale(sc,sc);
 ctx.fillStyle=m.color;ctx.beginPath();
@@ -70,10 +79,12 @@ ctx.restore();
 ctx.fillStyle='#fff';ctx.font='bold '+Math.max(10,Math.round(12*sc))+'px sans-serif';ctx.textAlign='center';ctx.textBaseline='middle';
 ctx.fillText(Math.ceil(m.hp),m.x,m.y);
 if(m.name){ctx.font=Math.max(9,Math.round(10*sc))+'px sans-serif';ctx.fillText(m.name,m.x,m.y-m.size*1.5-6)}
-}}
+}
+// Blast mode indicator
+if(blastMode){ctx.fillStyle='rgba(192,57,43,0.15)';ctx.fillRect(0,0,640,480);ctx.fillStyle='#e74c3c';ctx.font='bold 16px sans-serif';ctx.textAlign='center';ctx.fillText('TAP TO PLACE BLAST',320,30)}
+}
 done.onclick=function(){
 if(path.length<10){document.getElementById('drawStatus').textContent='Draw a shape first';document.getElementById('drawStatus').style.color='#e66';return}
-var d=Math.hypot(path[0].x-path[path.length-1].x,path[0].y-path[path.length-1].y);if(d>50){document.getElementById('drawStatus').textContent='Shape not closed! Connect start & end.';document.getElementById('drawStatus').style.color='#e66';return}
 var s=drawMonster();if(!s){document.getElementById('drawStatus').textContent='Draw a valid shape';document.getElementById('drawStatus').style.color='#e66';return}
 ws.send(JSON.stringify({t:'monster',m:s}));isReady=true;done.style.display='none';unready.style.display='inline-block';document.getElementById('drawStatus').textContent='Ready! Waiting for others...'};
 unready.onclick=function(){
@@ -82,14 +93,39 @@ function clamp(v,lo,hi){return Math.max(lo,Math.min(hi,v))}
 function getXY(e){var r=c.getBoundingClientRect(),sx=W/r.width,sy=H/r.height;var px=(e.touches?e.touches[0].clientX:e.clientX)-r.left,py=(e.touches?e.touches[0].clientY:e.clientY)-r.top;return{x:clamp(px*sx,5,W-5),y:clamp(py*sy,5,H-5)}}
 function onDown(e){if(isReady)return;var p=getXY(e);path=[p]}
 function smooth(p){for(var k=0;k<2;k++){var n=[];for(var i=0;i<p.length;i++){var a=p[i-1]||p[0],b=p[i],cc=p[i+1]||p[p.length-1];n.push({x:(a.x+b.x*2+cc.x)/4,y:(a.y+b.y*2+cc.y)/4})}p=n}return p}
-function onMove(e){if(path.length===0||isReady)return;var p=getXY(e);path.push(p);var draw=smooth(path.slice());var ctx=c.getContext('2d');ctx.fillStyle='#1a1a24';ctx.fillRect(0,0,W,H);ctx.strokeStyle='#8a6cb8';ctx.lineWidth=3;ctx.beginPath();ctx.moveTo(draw[0].x,draw[0].y);for(var i=1;i<draw.length;i++)ctx.lineTo(draw[i].x,draw[i].y);ctx.stroke()}
-function onUp(){if(path.length<10||isReady)return;path=smooth(path);var d=Math.hypot(path[0].x-path[path.length-1].x,path[0].y-path[path.length-1].y);if(d>50){document.getElementById('drawStatus').textContent='Shape not closed! Connect start & end.';document.getElementById('drawStatus').style.color='#e66';var ctx=c.getContext('2d');ctx.fillStyle='#1a1a24';ctx.fillRect(0,0,W,H);path=[];return}document.getElementById('drawStatus').textContent='Draw your monster';document.getElementById('drawStatus').style.color='#e0e0e0';drawMonster()}
+function onMove(e){if(path.length===0||isReady)return;var p=getXY(e);path.push(p);var draw=smooth(path.slice());var ctx=c.getContext('2d');ctx.fillStyle='#1a1a24';ctx.fillRect(0,0,W,H);ctx.strokeStyle='#8a6cb8';ctx.lineWidth=3;ctx.beginPath();ctx.moveTo(draw[0].x,draw[0].y);for(var i=1;i<draw.length;i++)ctx.lineTo(draw[i].x,draw[i].y);ctx.stroke();
+// Draw closing line hint
+if(draw.length>5){var d=Math.hypot(draw[0].x-draw[draw.length-1].x,draw[0].y-draw[draw.length-1].y);ctx.strokeStyle=d<50?'rgba(46,204,113,0.5)':'rgba(231,76,60,0.3)';ctx.setLineDash([5,5]);ctx.beginPath();ctx.moveTo(draw[draw.length-1].x,draw[draw.length-1].y);ctx.lineTo(draw[0].x,draw[0].y);ctx.stroke();ctx.setLineDash([])}}
+function onUp(){if(path.length<10||isReady)return;path=smooth(path);
+// Auto-close: add points from end back to start
+var gap=Math.hypot(path[0].x-path[path.length-1].x,path[0].y-path[path.length-1].y);
+if(gap>5){var steps=Math.max(2,Math.ceil(gap/10));for(var i=1;i<=steps;i++){var t=i/steps;path.push({x:path[path.length-steps].x*(1-t)+path[0].x*t,y:path[path.length-steps].y*(1-t)+path[0].y*t})}}
+document.getElementById('drawStatus').textContent='Shape ready!';document.getElementById('drawStatus').style.color='#2ecc71';drawMonster()}
 c.addEventListener('touchstart',function(e){e.preventDefault();onDown(e)});
 c.addEventListener('touchmove',function(e){e.preventDefault();onMove(e)});
 c.addEventListener('touchend',function(e){e.preventDefault();if(e.touches.length===0)onUp()});
 c.addEventListener('mousedown',onDown);
 c.addEventListener('mousemove',function(e){if(e.buttons)onMove(e)});
 c.addEventListener('mouseup',onUp);
+// Blast button
+blastBtn.onclick=function(){
+if(blastCooldown>0)return;
+blastMode=!blastMode;
+blastBtn.textContent=blastMode?'Cancel blast':'Blast (ready)'};
+function getArenaXY(e){
+var r=ac.getBoundingClientRect();
+var px=(e.touches?e.touches[0].clientX:e.clientX)-r.left;
+var py=(e.touches?e.touches[0].clientY:e.clientY)-r.top;
+return{x:px*(640/r.width),y:py*(480/r.height)}}
+function onArenaClick(e){
+if(!blastMode||blastCooldown>0)return;
+var p=getArenaXY(e);
+ws.send(JSON.stringify({t:'blast',x:p.x,y:p.y}));
+blastMode=false;blastCooldown=10;
+blastBtn.disabled=true;blastBtn.textContent='Blast (10s)';
+var cd=setInterval(function(){blastCooldown--;if(blastCooldown<=0){clearInterval(cd);blastBtn.disabled=false;blastBtn.textContent='Blast (ready)'}else{blastBtn.textContent='Blast ('+blastCooldown+'s)'}},1000)}
+ac.addEventListener('click',onArenaClick);
+ac.addEventListener('touchstart',function(e){if(blastMode){e.preventDefault();onArenaClick(e)}});
 setInterval(function(){if(arena.style.display==='flex'&&Object.keys(monsters).length)renderArena()},50);
 connect();
 })();
