--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 (function(){
 var lobby=document.getElementById('lobby'),ui=document.getElementById('ui'),arena=document.getElementById('arena'),c=document.getElementById('c'),ac=document.getElementById('ac'),msg=document.getElementById('msg'),room=document.getElementById('room'),count=document.getElementById('count'),qr=document.getElementById('qr'),done=document.getElementById('done'),unready=document.getElementById('unready'),log=document.getElementById('log'),blastBtn=document.getElementById('blastBtn');
 var W=300,H=300,path=[],playerId=0,myColor='#6a4c93',monsters={},packs=[],ws,isReady=false,bounds=[0,0,640,480];
-var blastCooldown=0;
+var blastCooldown=0,blastFx=[],isDead=false,hasSavedShape=false;
 var WS_URL=(location.protocol==='https:'?'wss:':'ws:')+'//'+(location.host||'localhost:3000');
 var retries=0;
 function post(m){msg.textContent=m;msg.style.color='#888'}
@@ -17,7 +17,11 @@ if(d.t==='code'){room.textContent='Room: '+d.code;var joinUrl=location.origin+'/
 else if(d.t==='joined'){count.textContent=(d.count||0)+' players';post('Player joined!')}
 else if(d.t==='status'){count.textContent=d.ready+'/'+d.total+' ready'}
 else if(d.t==='start'){lobby.style.display='none';ui.style.display='block';c.style.display='block';playerId=d.id;if(d.color)myColor=d.color}
-else if(d.t==='arena'){monsters=d.m;packs=d.pk||[];if(d.b)bounds=d.b;lobby.style.display='none';ui.style.display='none';arena.style.display='flex';blastBtn.style.display='inline-block';if(d.log)for(var i=0;i<d.log.length;i++)addLog(d.log[i]);renderArena()}
+else if(d.t==='arena'){monsters=d.m;packs=d.pk||[];if(d.b)bounds=d.b;if(d.bl)for(var bi=0;bi<d.bl.length;bi++)blastFx.push({x:d.bl[bi].x,y:d.bl[bi].y,age:0});lobby.style.display='none';ui.style.display='none';arena.style.display='flex';blastBtn.style.display='inline-block';if(d.log)for(var i=0;i<d.log.length;i++)addLog(d.log[i]);
+// Check if player is dead
+if(!monsters[playerId]&&!isDead){isDead=true;blastBtn.disabled=true;blastBtn.textContent='Dead';blastBtn.style.background='#333'}
+renderArena()}
+else if(d.t==='restart'){isDead=false;hasSavedShape=true;arena.style.display='none';ui.style.display='block';c.style.display='block';isReady=false;done.style.display='inline-block';unready.style.display='none';blastBtn.disabled=false;blastBtn.style.background='#c0392b';blastBtn.textContent='Blast (ready)';blastCooldown=0;blastFx=[];document.getElementById('drawStatus').textContent='Press Ready to keep shape, or redraw';document.getElementById('drawStatus').style.color='#888';if(path.length>3)drawMonster()}
 else if(d.t==='full'){postErr('Room full')}
 else if(d.t==='invalid'){postErr('Invalid code')}}}
 function createGame(){if(ws&&ws.readyState===1)ws.send(JSON.stringify({t:'create'}));else postErr('Connecting...')}
@@ -80,11 +84,22 @@ ctx.fillStyle='#fff';ctx.font='bold '+Math.max(10,Math.round(12*sc))+'px sans-se
 ctx.fillText(Math.ceil(m.hp),m.x,m.y);
 if(m.name){ctx.font=Math.max(9,Math.round(10*sc))+'px sans-serif';ctx.fillText(m.name,m.x,m.y-m.size*1.5-6)}
 }
+// Blast effects
+for(var bi=blastFx.length-1;bi>=0;bi--){
+var bf=blastFx[bi];bf.age++;
+var r=bf.age*4;var alpha=Math.max(0,1-bf.age/20);
+ctx.strokeStyle='rgba(255,100,50,'+alpha+')';ctx.lineWidth=Math.max(1,4-bf.age*0.15);
+ctx.beginPath();ctx.arc(bf.x,bf.y,r,0,Math.PI*2);ctx.stroke();
+ctx.strokeStyle='rgba(255,200,50,'+(alpha*0.5)+')';ctx.beginPath();ctx.arc(bf.x,bf.y,r*0.6,0,Math.PI*2);ctx.stroke();
+if(bf.age>20)blastFx.splice(bi,1);
+}
 }
 done.onclick=function(){
+if(hasSavedShape&&path.length<10){
+ws.send(JSON.stringify({t:'monster',reuse:true}));isReady=true;done.style.display='none';unready.style.display='inline-block';document.getElementById('drawStatus').textContent='Ready! Waiting for others...';return}
 if(path.length<10){document.getElementById('drawStatus').textContent='Draw a shape first';document.getElementById('drawStatus').style.color='#e66';return}
 var s=drawMonster();if(!s){document.getElementById('drawStatus').textContent='Draw a valid shape';document.getElementById('drawStatus').style.color='#e66';return}
-ws.send(JSON.stringify({t:'monster',m:s}));isReady=true;done.style.display='none';unready.style.display='inline-block';document.getElementById('drawStatus').textContent='Ready! Waiting for others...'};
+hasSavedShape=false;ws.send(JSON.stringify({t:'monster',m:s}));isReady=true;done.style.display='none';unready.style.display='inline-block';document.getElementById('drawStatus').textContent='Ready! Waiting for others...'};
 unready.onclick=function(){
 ws.send(JSON.stringify({t:'unready'}));isReady=false;unready.style.display='none';done.style.display='inline-block';document.getElementById('drawStatus').textContent='Draw your monster'};
 function clamp(v,lo,hi){return Math.max(lo,Math.min(hi,v))}
@@ -107,10 +122,10 @@ c.addEventListener('mousemove',function(e){if(e.buttons)onMove(e)});
 c.addEventListener('mouseup',onUp);
 // Blast button - fires from your monster
 blastBtn.onclick=function(){
-if(blastCooldown>0)return;
+if(blastCooldown>0||isDead)return;
 ws.send(JSON.stringify({t:'blast'}));
 blastCooldown=10;blastBtn.disabled=true;blastBtn.textContent='Blast (10s)';
-var cd=setInterval(function(){blastCooldown--;if(blastCooldown<=0){clearInterval(cd);blastBtn.disabled=false;blastBtn.textContent='Blast (ready)'}else{blastBtn.textContent='Blast ('+blastCooldown+'s)'}},1000)};
+var cd=setInterval(function(){blastCooldown--;if(blastCooldown<=0){clearInterval(cd);if(!isDead){blastBtn.disabled=false;blastBtn.textContent='Blast (ready)';blastBtn.style.background='#c0392b'}}else{blastBtn.textContent='Blast ('+blastCooldown+'s)'}},1000)};
 setInterval(function(){if(arena.style.display==='flex'&&Object.keys(monsters).length)renderArena()},16);
 connect();
 })();
