--- a/index.html
+++ b/index.html
@@ -253,18 +253,18 @@
                     var hz = hazards[hi];
                     if (hz.type === 'fire') {
                         ctx.fillStyle = 'rgba(255,100,0,0.4)'; ctx.beginPath(); ctx.arc(hz.x, hz.y, 50, 0, Math.PI * 2); ctx.fill();
-                        ctx.fillStyle = '#f80'; ctx.font = '16px sans-serif'; ctx.textAlign = 'center'; ctx.fillText('🔥', hz.x, hz.y);
+                        ctx.fillStyle = '#f80'; ctx.font = 'bold 16px sans-serif'; ctx.textAlign = 'center'; ctx.fillText('F', hz.x, hz.y);
                     } else if (hz.type === 'vortex') {
                         ctx.strokeStyle = 'rgba(128,0,255,0.6)'; ctx.lineWidth = 3;
                         for (var vi = 0; vi < 3; vi++) { ctx.beginPath(); ctx.arc(hz.x, hz.y, 30 + vi * 25, 0, Math.PI * 2); ctx.stroke(); }
-                        ctx.fillStyle = '#808'; ctx.font = '14px sans-serif'; ctx.fillText('🌀', hz.x, hz.y);
+                        ctx.fillStyle = '#808'; ctx.font = 'bold 14px sans-serif'; ctx.fillText('V', hz.x, hz.y);
                     }
                 }
                 // Lightning warning/strike
                 if (lightningWarning) {
                     ctx.strokeStyle = 'rgba(255,255,0,0.7)'; ctx.lineWidth = 2; ctx.setLineDash([5, 5]);
                     ctx.beginPath(); ctx.arc(lightningWarning.x, lightningWarning.y, 60, 0, Math.PI * 2); ctx.stroke();
-                    ctx.setLineDash([]); ctx.fillStyle = '#ff0'; ctx.font = '20px sans-serif'; ctx.textAlign = 'center'; ctx.fillText('⚡', lightningWarning.x, lightningWarning.y);
+                    ctx.setLineDash([]); ctx.fillStyle = '#ff0'; ctx.font = 'bold 24px sans-serif'; ctx.textAlign = 'center'; ctx.fillText('!', lightningWarning.x, lightningWarning.y);
                 }
                 if (lightningStrike) {
                     ctx.fillStyle = 'rgba(255,255,200,0.8)'; ctx.beginPath(); ctx.arc(lightningStrike.x, lightningStrike.y, 60, 0, Math.PI * 2); ctx.fill();
@@ -280,11 +280,11 @@
                 }
                 // Power-ups
                 var puColors = { speed: '#ff0', shield: '#08f', damage: '#f00', ghost: '#aaa' };
-                var puSymbols = { speed: '⚡', shield: '🛡', damage: '💥', ghost: '👻' };
+                var puSymbols = { speed: 'S', shield: 'Sh', damage: 'D', ghost: 'G' };
                 for (var pi = 0; pi < powerups.length; pi++) {
                     var pu = powerups[pi];
                     ctx.fillStyle = puColors[pu.type] || '#fff'; ctx.beginPath(); ctx.arc(pu.x, pu.y, 12, 0, Math.PI * 2); ctx.fill();
-                    ctx.fillStyle = '#000'; ctx.font = '14px sans-serif'; ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
+                    ctx.fillStyle = '#000'; ctx.font = 'bold 12px sans-serif'; ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
                     ctx.fillText(puSymbols[pu.type] || '?', pu.x, pu.y);
                 }
                 // Monsters
@@ -349,6 +349,17 @@
                     if (ft.age > 40) floatTexts.splice(fi, 1);
                 }
             }
+            if (monsters[playerId]) {
+                var m = monsters[playerId];
+                if (isDead) {
+                    if (blastBtn) blastBtn.textContent = 'Dead';
+                    if (abilityBtn) abilityBtn.textContent = 'Dead';
+                } else {
+                    if (blastBtn) blastBtn.textContent = 'Blast' + (blastCooldown > 0 ? ' (' + blastCooldown + 's)' : ' (ready)');
+                    var ab = myAbility === 'none' ? 'No Ability' : (myAbility.charAt(0).toUpperCase() + myAbility.slice(1));
+                    if (abilityBtn) abilityBtn.textContent = ab + (abilityCooldown > 0 ? ' (' + abilityCooldown + 's)' : '');
+                }
+            }
             done.onclick = function () {
                 if (hasSavedShape && path.length < 10) {
                     ws.send(JSON.stringify({ t: 'monster', reuse: true })); isReady = true; done.style.display = 'none'; unready.style.display = 'inline-block'; document.getElementById('drawStatus').textContent = 'Ready! Waiting for others...'; return
@@ -397,13 +408,13 @@
                 if (blastCooldown > 0 || isDead) return;
                 ws.send(JSON.stringify({ t: 'blast' }));
                 blastCooldown = 10; blastBtn.disabled = true; blastBtn.textContent = 'Blast (10s)';
-                var cd = setInterval(function () { blastCooldown--; if (blastCooldown <= 0) { clearInterval(cd); if (!isDead) { blastBtn.disabled = false; blastBtn.textContent = 'Blast (ready)'; blastBtn.style.background = '#c0392b' } } else { blastBtn.textContent = 'Blast (' + blastCooldown + 's)' } }, 1000)
+                var cd = setInterval(function () { blastCooldown--; if (blastCooldown <= 0) { clearInterval(cd); if (!isDead) { blastBtn.disabled = false; blastBtn.style.background = '#c0392b' } } }, 1000)
             };
             abilityBtn.onclick = function () {
                 if (abilityCooldown > 0 || isDead || myAbility === 'none') return;
                 ws.send(JSON.stringify({ t: 'ability' }));
                 abilityCooldown = 10; abilityBtn.disabled = true; abilityBtn.textContent = myAbility + ' (10s)';
-                var cd = setInterval(function () { abilityCooldown--; if (abilityCooldown <= 0) { clearInterval(cd); if (!isDead) { abilityBtn.disabled = false; abilityBtn.textContent = myAbility.charAt(0).toUpperCase() + myAbility.slice(1); abilityBtn.style.background = '#9b59b6' } } else { abilityBtn.textContent = myAbility + ' (' + abilityCooldown + 's)' } }, 1000)
+                var cd = setInterval(function () { abilityCooldown--; if (abilityCooldown <= 0) { clearInterval(cd); if (!isDead) { abilityBtn.disabled = false; abilityBtn.style.background = '#9b59b6' } } }, 1000)
             };
             setInterval(function () { if (arena.style.display === 'flex' && Object.keys(monsters).length) renderArena() }, 16);
             connect();
